# vid2gif

./: Cargo.toml  README.md  ruv-swarm-mcp.db
docs/memory_bank/: active-context.md  progress.md
docs/threads/: 20250715-vid2gif-conversation.md
src/: main.rs
