[package]
name = "vid2gif"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for converting videos to GIFs using ffmpeg"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
which = "6.0"
